--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+
+@peterbarkoczi
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+peterbarkoczi
+/
+search-this-outfit-test
+1
+0
+0
+ Code
+ Issues 0
+ Pull requests 0 Actions
+ Projects 0
+ Wiki
+ Security 0
+ Insights
+ Settings
+search-this-outfit-test/.gitignore/.gitignore
+@peterbarkoczi peterbarkoczi Create .gitignore
+1026e4d 4 minutes ago
+146 lines (114 sloc)  2.74 KB
+
 
 # Created by https://www.gitignore.io/api/git,java,maven,intellij
 # Edit at https://www.gitignore.io/?templates=git,java,maven,intellij
@@ -144,3 +176,15 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.gitignore.io/api/git,java,maven,intellij
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
