--- a/.gitignore
+++ b/.gitignore
@@ -80,11 +80,11 @@ search-this-outfit-test/.gitignore/.gitignore
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+ .idea/modules.xml
+ .idea/*.iml
+ .idea/modules
+ *.iml
+ *.ipr
 
 # CMake
 cmake-build-*/
@@ -188,3 +188,6 @@ API
 Training
 Blog
 About
+/.idea/compiler.xml
+/.idea/
+/search-this-outfit-test.iml
