--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <includes>
-                        <exclude>**/*Main.java</exclude>
+                        <exclude>**/*RunCucumberTests.java</exclude>
                     </includes>
                     <systemPropertyVariables>
                         <!--suppress UnresolvedMavenProperty -->
