refactor docker-compose.yml#2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 backend:
-  image: ../backend/java_backend/backend:latest
+  image: backend:latest
   environment:
     - API_KEY=2594914d2f734dacaf3087503148c5d1
   ports:
     - 8080:8080
 
 frontend:
-  image: ../frontend/frontend:latest
+  image: frontend:latest
   ports:
     - 3000:3000
