--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,22 @@ frontend:
   image: frontend:latest
   ports:
     - 3000:3000
+
+seleniumhub:
+  image: selenium/hub
+  ports:
+    - 4444:4444
+
+firefoxnode:
+  image: selenium/node-firefox-debug
+  ports:
+    - 4577
+  links:
+    - seleniumhub:hub
+
+chromenode:
+  image: selenium/node-chrome-debug
+  ports:
+    - 4578
+  links:
+    - seleniumhub:hub
