--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,6 @@ frontend:
     - 3000:3000
 
 chrome:
-  image: selenium/standalone-chrome:latest
+  image: selenium/standalone-firefox:3.11.0-antimony
   ports:
     - 4444:4444
